[gd_scene load_steps=6 format=3 uid="uid://plateau_sample_attr_display"]

[ext_resource type="Script" path="res://samples/attributes_display_sample.gd" id="1_script"]
[ext_resource type="Font" uid="uid://japanese_font" path="res://fonts/japanese_font.tres" id="2_font"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_sky"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.8, 0.8, 0.8, 1)

[node name="AttributesDisplaySample" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 100, 200)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 0, 100, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_sky")

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 500.0
offset_bottom = 40.0
text = "Click 'Import GML' to load a CityGML file"

[node name="ImportButton" type="Button" parent="UI"]
offset_left = 10.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 80.0
text = "Import GML..."

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="AttributesLabel" type="RichTextLabel" parent="UI/Panel/ScrollContainer"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_font")
theme_override_fonts/bold_font = ExtResource("2_font")
bbcode_enabled = true
text = "Click on a building to see its attributes."
fit_content = true
